Update index.html for scroller

--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
               <h2><span>Our Sponsors</span></h2>
             </div>
 
-            <div class="clients-slider swiper">
-              <div class="swiper-wrapper align-items-center">
+            <div class="clients-slider swiper scroller">
+              <div class="swiper-wrapper align-items-center scroller-in">
                 <div class="swiper-slide"><img src="assets/img/clients/1.png" class="img-fluid" alt=""></div>
                 <div class="swiper-slide"><img src="assets/img/clients/2.png" class="img-fluid" alt=""></div>
                 <div class="swiper-slide"><img src="assets/img/clients/3.png" class="img-fluid" alt=""></div>
